[gd_scene load_steps=15 format=3 uid="uid://bjmi5sukccoma"]

[ext_resource type="Script" path="res://Scenes and Scripts/tutorial/TutorialInfo.gd" id="1_6afw4"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="2_dbjjh"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="3_gx624"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="3_o8url"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="4_3eia6"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="5_2ymkv"]
[ext_resource type="Texture2D" uid="uid://c3nrennubqoow" path="res://Textures/Buttons/icons/back.png" id="6_1qgbo"]
[ext_resource type="Texture2D" uid="uid://dvx430022t0ua" path="res://Textures/Buttons/icons/next.png" id="6_ele4h"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="7_pgcfn"]
[ext_resource type="Texture2D" uid="uid://qhabllbii547" path="res://Textures/Buttons/icons/finish.png" id="10_qnfej"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_khgyl"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
texture = ExtResource("3_gx624")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s54mx"]
resource_local_to_scene = true
shader = ExtResource("5_2ymkv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wy0qy"]
resource_local_to_scene = true
shader = ExtResource("5_2ymkv")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gjsw3"]
resource_local_to_scene = true
shader = ExtResource("5_2ymkv")

[node name="TutorialInfo" type="Control" node_paths=PackedStringArray("Text", "GrabAreas")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6afw4")
Text = NodePath("TutorialPanel/VBoxContainer/TutorialText")
GrabAreas = [NodePath("TutorialPanel")]

[node name="TutorialPanel" type="PanelContainer" parent="."]
material = ExtResource("2_dbjjh")
layout_mode = 0
offset_right = 144.0
offset_bottom = 108.0
theme_override_styles/panel = SubResource("StyleBoxTexture_khgyl")

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPanel"]
use_parent_material = true
layout_mode = 2

[node name="TutorialText" type="Label" parent="TutorialPanel/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_o8url")
theme_override_font_sizes/font_size = 9
text = "Welcome to FeynCraft! Here you will be able to draw, create, and generate Feynman diagram problems.

Click next below to get started."
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="TutorialPanel/VBoxContainer"]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="PrevStep" parent="TutorialPanel/VBoxContainer/Buttons" instance=ExtResource("4_3eia6")]
visible = false
material = SubResource("ShaderMaterial_s54mx")
layout_mode = 2
icon = ExtResource("6_1qgbo")
minimum_size = Vector2(24, 21)
icon_use_parent_material = true

[node name="Tooltip" parent="TutorialPanel/VBoxContainer/Buttons/PrevStep" instance=ExtResource("7_pgcfn")]
tooltip = "Prev Step"

[node name="NextStep" parent="TutorialPanel/VBoxContainer/Buttons" instance=ExtResource("4_3eia6")]
material = SubResource("ShaderMaterial_wy0qy")
layout_mode = 2
icon = ExtResource("6_ele4h")
minimum_size = Vector2(24, 21)
icon_use_parent_material = true

[node name="Tooltip" parent="TutorialPanel/VBoxContainer/Buttons/NextStep" instance=ExtResource("7_pgcfn")]
tooltip = "Next Step"

[node name="Finish" parent="TutorialPanel/VBoxContainer/Buttons" instance=ExtResource("4_3eia6")]
visible = false
material = SubResource("ShaderMaterial_gjsw3")
layout_mode = 2
icon = ExtResource("10_qnfej")
minimum_size = Vector2(24, 21)
icon_use_parent_material = true

[node name="Tooltip" parent="TutorialPanel/VBoxContainer/Buttons/Finish" node_paths=PackedStringArray("TooltipPanel", "TooltipLabel", "TooltipContainer") instance=ExtResource("7_pgcfn")]
TooltipPanel = NodePath("../../NextStep/Tooltip/TooltipPanel")
TooltipLabel = NodePath("../../NextStep/Tooltip/TooltipPanel/HBoxContainer/Label")
TooltipContainer = NodePath("../../NextStep/Tooltip/TooltipPanel/HBoxContainer")
tooltip = "Finish the tutorial"

[connection signal="pressed" from="TutorialPanel/VBoxContainer/Buttons/PrevStep" to="." method="_on_prev_step_pressed"]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/Buttons/NextStep" to="." method="_on_next_step_pressed"]
[connection signal="pressed" from="TutorialPanel/VBoxContainer/Buttons/Finish" to="." method="_on_finish_pressed"]
